# hw31

./: manage.py  pyproject.toml  pytest.ini
hw31/: asgi.py  settings.py  urls.py  wsgi.py
